--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Coronavirus</title>
-  <link rel="shortcut icon" type="image/x-icon" href="/assets/images/icon.png">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/images/icon.png">
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,7 +13,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/befd90e7ed.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/assets/styles/style.css">
+  <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
   <nav class="fixed-top">
     <div class="logo">
       <a href="index.html">
-        <img src="/assets/images/logo-white.png" alt="logo" class="img-fluid">
+        <img src="assets/images/logo-white.png" alt="logo" class="img-fluid">
       </a>
     </div>
     <ul class="nav-links">
@@ -61,7 +61,7 @@
           </p>
         </div>
         <div class="col-md-5 col-sm-12 pt-5 mt-3">
-          <img src="/assets/images/banner-top.png" alt="banner" class="img-fluid">
+          <img src="assets/images/banner-top.png" alt="banner" class="img-fluid">
         </div>
       </div>
     </div>
@@ -82,19 +82,19 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4 col-sm-12">
-          <img src="/assets/images/landing-a.jpg" class="img-fluid" alt="img-1">
+          <img src="assets/images/landing-a.jpg" class="img-fluid" alt="img-1">
           <p class="lead  pt-3">
             Landing Demo v1
           </p>
         </div>
         <div class="col-md-4 col-sm-12">
-          <img src="/assets/images/landing-b.jpg" class="img-fluid" alt="img-1">
+          <img src="assets/images/landing-b.jpg" class="img-fluid" alt="img-1">
           <p class="lead  pt-3">
             Landing Demo v2
           </p>
         </div>
         <div class="col-md-4 col-sm-12">
-          <img src="/assets/images/inner-a.jpg" class="img-fluid" alt="img-1">
+          <img src="assets/images/inner-a.jpg" class="img-fluid" alt="img-1">
           <p class="lead  pt-3">
             Inner Page-Example
           </p>
@@ -117,19 +117,19 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4 col-sm-12">
-          <img src="/assets/images/landing-rtl-a.jpg" class="img-fluid" alt="img-1">
+          <img src="assets/images/landing-rtl-a.jpg" class="img-fluid" alt="img-1">
           <p class="lead  pt-3">
             Landing Demo v1
           </p>
         </div>
         <div class="col-md-4 col-sm-12">
-          <img src="/assets/images/landing-rtl-b.jpg" class="img-fluid" alt="img-1">
+          <img src="assets/images/landing-rtl-b.jpg" class="img-fluid" alt="img-1">
           <p class="lead  pt-3">
             Landing Demo v2
           </p>
         </div>
         <div class="col-md-4 col-sm-12">
-          <img src="/assets/images/inner-rtl-a.jpg" class="img-fluid" alt="img-1">
+          <img src="assets/images/inner-rtl-a.jpg" class="img-fluid" alt="img-1">
           <p class="lead  pt-3">
             Inner Page-Example
           </p>
